--- a/css/sla.css
+++ b/css/sla.css
@@ -1,4 +1,32 @@
 
+h1{
+    color: #fff;
+}
+
+h2{
+    color: #fff;
+}
+
+
+h3{
+    color: #fff;
+}
+
+
+h4{
+    color: #fff;
+}
+
+
+h5{
+    color: #fff;
+}
+
+
+h6{
+    color: #fff;
+}
+
 p{
     color: #fff;
 }
