--- a/css/class.css
+++ b/css/class.css
@@ -4,7 +4,9 @@ body, ul, li, p {
     list-style: none;
     font-family: arial;
 }
-
+p, h1, h2, h3, h4, h5, h6{
+    color: #fff;
+}
 .title{
     text-align: left;
     padding-left: 10px;
