--- a/css/class.css
+++ b/css/class.css
@@ -1,48 +1,3 @@
-body, ul, li, p {
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-    font-family: arial;
-}
-p, h1, h2, h3, h4, h5, h6{
-    color: #fff;
-}
-.title{
-    text-align: left;
-    padding-left: 10px;
-}
-
-/* Cabeçalho */
-
-.cabeçalho{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    background-color: rgba(0, 66, 50, 0.685);
-
-}
-
-.cabeçalho a{
-    text-decoration: none;
-    padding-left: 5px;
-    color: #fff;
-}
-
-.menu{
-    display: flex;
-    /* background-color: rgba(0, 19, 19, 0.596); */
-}
-
-.menu li{
-    margin-left: 10px;
-}
-
-.menu li a{
-    display: block;
-    padding: 10px;
-}
 
 .corpo{
     background-color: rgb(13, 0, 26);
@@ -50,9 +5,14 @@ p, h1, h2, h3, h4, h5, h6{
 
 /* Projetos: */
 
+.projetos{
+    display: flex;
+}
+
 .projeto{
     display: flex;
-    text-align: left;
+    padding: 5px;
+    
 }
 
 .projeto ul{
@@ -62,7 +22,8 @@ p, h1, h2, h3, h4, h5, h6{
 .projeto img{
     background-color: rgba(0, 78, 59, 0.63);
     padding: 5px;
-    width: 35mm;
+    width: 25%;
+    
 }
 
 .projeto a{
@@ -81,33 +42,71 @@ p, h1, h2, h3, h4, h5, h6{
 .projeto h5{
     margin-top: 6px;
     margin-bottom: 1px;
-}
-
-/* right */
-
-.taxtodireta{
-    text-align: left;
-}
-.taxtosquerda{
-    text-align: right;
-}
-
-/* .projeto1{
-    background-color: rgba(0, 19, 19, 0.596);
-} */
+}    
 
 div.projeto{
     margin-bottom: 30px;
 }
+/* organização do texto e da imagem */
 
+/* div.taxtosquerda img{
+    order: 1;
+}     */
+
+.taxtodireta{
+    text-align: none;
+}
+
+.taxtosquerda{
+    text-align: none;
+}
+
+
+
+
+/* .projeto1{
+    background-color: rgba(0, 19, 19, 0.596);
+} */    
 
 /* Responsivo */
+
+@media (max-width: 425px) {
+    .projetos {
+        flex-wrap: wrap;
+    }
+    div.projetos div.taxtosquerda .tambprojeto{
+        order: 1;
+    }
+    .taxtosquerda{
+        text-align: right;
+    }
+
+}
 
 @media (max-width: 395px) {
     .cabeçalho{
         font-size: 80%;
     }
+    .projeto img{
+        width: 29%;
+    }
+    .projeto img{
+        width: 29%;
+    }
 }
+
+/* 
+@media (max-width: 395px) {
+    .projeto img{
+        width: 29%;
+    }
+}
+
+@media (max-width: 395px) {
+    .projeto img{
+        width: 29%;
+    }
+} */
 
 @media (max-width: 320px) {
     .cabeçalho{
@@ -115,17 +114,5 @@ div.projeto{
     }
     h2.title{
         font-size: 130%;
-    }
-}
-
-@media (max-width: 395px) {
-    .projeto img{
-        width: 29%;
-    }
-}
-
-@media (max-width: 395px) {
-    .projeto img{
-        width: 29%;
     }
 }
